--- a/setup/Makefile
+++ b/setup/Makefile
@@ -6,7 +6,7 @@ SNAPVER = 2.x
 
 # set the path to your SNAP directory here
 #GITDIR = ../Snap-$(SNAPVER)
-GITDIR = ../../snap
+GITDIR = ../../snap-dev-64
 SNAPDIR = $(GITDIR)/$(SNAP)
 GLIBDIR = $(GITDIR)/$(GLIB)
 
