--- a/Makefile.config
+++ b/Makefile.config
@@ -15,6 +15,7 @@ else ifeq ($(UNAME), Darwin)
   SWIGFLAGS += -D_CMPWARN -D__stdcall -DSW_SNAPPY -DNONUMPY
   CXXFLAGS += -DSW_SNAPPY
   LDFLAGS += -lpython -dynamiclib -headerpad_max_install_names
+  LDFLAGS3 += -lpython3.6 -dynamiclib -headerpad_max_install_names
   CLANG := $(shell g++ -v 2>&1 | grep clang | cut -d " " -f 2)
   ifneq ($(CLANG), LLVM)
     SWIGFLAGS += -DGCC_ATOMIC
