- updated Makefile for python3 build on Linux

--- a/Makefile.config
+++ b/Makefile.config
@@ -9,6 +9,7 @@ ifeq ($(UNAME), Linux)
   SWIGFLAGS += -D_CMPWARN -D__stdcall -DSW_SNAPPY -D_OPENMP -DNONUMPY -DUSE_OPENMP -DGCC_ATOMIC
   CXXFLAGS += -fPIC -D__STDC_LIMIT_MACROS -DSW_SNAPPY -fopenmp
   LDFLAGS += -shared -fopenmp
+  LDFLAGS3 += -shared -fopenmp
   MANIFEST = MANIFEST.nx
 else ifeq ($(UNAME), Darwin)
   # OS X flags
