- added const to GetDat() in attribute iterators - expanded Makefile with a flag for python3 - added unicode conversion for TStr parameters to snap_types.i - added _next__() to vector and hash types - prepared tneanet.py for python3, also added assertions for string attributes

--- a/Makefile.config
+++ b/Makefile.config
@@ -7,6 +7,7 @@ UNAME := $(shell uname)
 ifeq ($(UNAME), Linux)
   # Linux flags
   SWIGFLAGS += -D_CMPWARN -D__stdcall -DSW_SNAPPY -D_OPENMP -DNONUMPY -DUSE_OPENMP -DGCC_ATOMIC
+  SWIGFLAGS3 += -py3 -D_CMPWARN -D__stdcall -DSW_SNAPPY -D_OPENMP -DNONUMPY -DUSE_OPENMP -DGCC_ATOMIC
   CXXFLAGS += -fPIC -D__STDC_LIMIT_MACROS -DSW_SNAPPY -fopenmp
   LDFLAGS += -shared -fopenmp
   LDFLAGS3 += -shared -fopenmp
