- minor update for python3

--- a/Makefile.config
+++ b/Makefile.config
@@ -7,7 +7,6 @@ UNAME := $(shell uname)
 ifeq ($(UNAME), Linux)
   # Linux flags
   SWIGFLAGS += -D_CMPWARN -D__stdcall -DSW_SNAPPY -D_OPENMP -DNONUMPY -DUSE_OPENMP -DGCC_ATOMIC
-  SWIGFLAGS3 += -py3 -D_CMPWARN -D__stdcall -DSW_SNAPPY -D_OPENMP -DNONUMPY -DUSE_OPENMP -DGCC_ATOMIC
   CXXFLAGS += -fPIC -D__STDC_LIMIT_MACROS -DSW_SNAPPY -fopenmp
   LDFLAGS += -shared -fopenmp
   LDFLAGS3 += -shared -fopenmp
@@ -36,4 +35,6 @@ else ifeq ($(shell uname -o), Cygwin)
   LIBS += -lpython2.6
   MANIFEST = MANIFEST.win
 endif
+
+SWIGFLAGS3 += -py3 $(SWIGFLAGS)
 
